fully functional invites tab, flesh out bugs
also:
* fix select chevrons appearing above modals
* add custom errors and use them for http errors, also now appear above
  modals.
* functional logout button
* slightly cleaned up admin.ts

--- a/css/base.css
+++ b/css/base.css
@@ -299,4 +299,5 @@ p.top {
     position: fixed;
     right: 1rem;
     bottom: 1rem;
+    z-index: 16;
 }
