--- a/css/modal.css
+++ b/css/modal.css
@@ -1,7 +1,7 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 12;
     top: 0;
     left: 0;
     width: 100%;
